Resources Page: Fixed dynamic data management and some alignment (#1)
Resources Page: Fixed dynamic data management and some alignment

--- a/_sass/custom/_resources.scss
+++ b/_sass/custom/_resources.scss
@@ -1,4 +1,18 @@
-
 .resources {
-    margin-top: 30px;
+    .blog{
+
+    margin-bottom: 50px;
+
+        .card-horizontal {
+            display: flex;
+            flex: 1 1 auto;
+        }
+
+        .card-columns {
+          @include media-breakpoint-only(lg) {
+            column-count: 4;
+          }}
+   }
 }
+
+
