--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -5,6 +5,19 @@
 @import "resources";
 @import "team";
 
+.card {
+    height: 100%;
+}
+
+.card-body {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+}
+
+.card-title{
+    flex-grow: 1;
+}
 
 h1, h2, h3 {
     @extend .text-center;
