--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,21 +3,4 @@
 
 @import "main";
 
-.card {
-    height: 100%;
-}
 
-.card-body {
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-}
-
-.card-title{
-    flex-grow: 1;
-}
-
-.card-horizontal {
-    display: flex;
-    flex: 1 1 auto;
-}
